          since the amount of rows is always equal to the "pagesize"
        - $rs->pager now uses a lazy count to determine the amount of
          total entries only when really needed, instead of doing it
          at instantiation time
        - New documentation map organized by features
          (DBIx::Class::Manual::Features)

    * Fixes
        - Fix memory leak during populate() on 5.8.x perls
        - Fix result_soutrce_instance leaks on compose_namespace
        - Make sure exception_action does not allow exception-hiding
          due to badly-written handlers (the mechanism was never meant
          to be able to suppress exceptions)
        - Fixed rels ending with me breaking subqueried limit realiasing
        - Fixed $rs->update/delete on resutsets constrained by an
          -or condition
        - Remove rogue GROUP BY on non-multiplying prefetch-induced
          subqueries
        - Oracle sequence detection now *really* works across schemas
          (fixed some ommissions from 0.08123)
        - dbicadmin now uses a /usr/bin/env shebang to work better with
          perlbrew and other local perl builds
        - bulk-inserts via $dbh->bind_array (void $rs->populate) now
          display properly in DBIC_TRACE
        - Incomplete exception thrown on relationship auto-fk-inference
          failures
        - Fixed distinct with order_by to not double-specify the same
          column in the GROUP BY clause
        - Properly support column names with symbols (e.g. single quote)
          via custom accessors
        - Fixed ::Schema::Versioned to work properly with quoting on
          (RT#59619)
        - Fixed t/54taint fails under local-lib
        - Fixed SELECT ... FOR UPDATE with LIMIT regression (RT#58554)
        - Fixed CDBICompat to preserve order of column-group additions,
          so that test relying on the order of %{} will no longer fail
        - Fixed mysterious ::Storage::DBI goto-shim failures on older